# ShLauncher

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
tests/: GameDirTest.cc  GameTest.cc  LauncherTest.cc
